--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "medici",
-  "version": "0.12.2",
+  "version": "0.12.3",
   "description": "Simple double-entry accounting for Node + Mongoose",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "http://github.com/jraede/medici"
+    "url": "https://github.com/mos-flash/medici"
   },
   "keywords": [
     "accounting",
